Horizontal Scrolling and Fixed issue with nav indicators and items

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
     font-family: "Courier New", Courier, monospace;
     color: white;
     height: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 *,
@@ -21,28 +21,34 @@ body {
 
 .frame.nav-frame {
     /* border: 1px red solid; */
-    height: 100px;
+    height: 150px;
 }
 
 #content-frame {
     /* border: 1px green solid; */
     height: 800px;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* position: relative; */
 }
 
 #content-frame section {
     /* border: 1px orange solid; */
+    display: block;
     width: 100vw;
+    min-width: 100vw;
     height: 100%;
-    transition: right 0.5s;
+    /* transition: right 0.5s; */
 }
 
 .frame.footer-frame {
-    height: calc(100vh - 100px - 800px);
+    height: calc(100vh - 150px - 800px);
 }
 
 /* Navbar */
+
+#navbar > nav {
+    max-height: 150px;
+}
 
 #navbar > nav:hover {
     box-shadow: 0px 0px 10px 10px #141f25;
@@ -212,7 +218,7 @@ nav.indicators ul {
 
 nav.indicators ul li {
     display: inline-block;
-    width: 50px;
+    width: 100px;
     height: 10px;
     margin: 0 10px;
     cursor: pointer;
@@ -227,7 +233,7 @@ nav.indicators ul li span {
     top: 3px;
     left: 0;
     right: 0;
-    width: 50px;
+    width: 100px;
     height: 3px;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 4px;
